--- a/app.css
+++ b/app.css
@@ -4,19 +4,28 @@ body {
 }
 
 .navbar-inverse {
-  background-color: #00A591;
-  border-bottom-color: rgba(0, 165, 145, 0.4);
-  box-shadow: 0px 2px 5px rgba(0,0,0,0.2);
+  background-color: rgba(255, 255, 255, 0.1);
+  border: none;
 }
 
 .navbar-inverse .navbar-nav li a {
-  color: white;
+  color: #BFD641;;
 }
 
-.navbar-inverse .navbar-brand p {
-  color: white;
+.navbar-inverse .navbar-brand span {
+  color: #BFD641;;
 }
 
 #header-img {
   color: #BFD641;
+}
+
+.jumbotron {
+  margin-top: 70px;
+  padding-left: 0;
+}
+
+.text-content{
+  padding-top: 2rem;
+  text-align: center;
 }
