Features deleted, Testimonials wip

--- a/app.css
+++ b/app.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: #f9f9f9;
 }
 
 .navbar-inverse {
@@ -9,11 +10,11 @@ body {
 }
 
 .navbar-inverse .navbar-nav li a {
-  color: #BFD641;;
+  color: #BFD641;
 }
 
 .navbar-inverse .navbar-brand span {
-  color: #BFD641;;
+  color: #BFD641;
 }
 
 #header-img {
@@ -28,4 +29,14 @@ body {
 .text-content{
   padding-top: 2rem;
   text-align: center;
+}
+
+.dark-bg {
+  margin-top: 70px;
+  background-color: #232323;
+  color: #f9f9f9;
+}
+
+footer {
+  font-size: 1rem;
 }
