--- a/app.css
+++ b/app.css
@@ -37,6 +37,13 @@ body {
   color: #f9f9f9;
 }
 
+.test-img {
+  width: auto;
+  height: 150px;
+  border-radius: 50%;
+  border: 1px solid #f9f9f9;
+}
+
 footer {
   font-size: 1rem;
 }
